Replace Paths.get() by Path.of()