@@ -15,23 +15,6 @@
  */
 package io.inverno.tool.maven;
 
-import java.io.File;
-import java.io.IOException;
-import java.lang.module.ModuleFinder;
-import java.lang.module.ModuleReference;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Optional;
-import java.util.ServiceLoader;
-import java.util.Set;
-import java.util.spi.ToolProvider;
-
-import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.MojoFailureException;
-import org.apache.maven.plugins.annotations.Parameter;
-import org.codehaus.plexus.util.StringUtils;
-
 import io.inverno.tool.maven.internal.DependencyModule;
 import io.inverno.tool.maven.internal.ProgressBar;
 import io.inverno.tool.maven.internal.ProjectModule;
@@ -40,6 +23,20 @@ import io.inverno.tool.maven.internal.task.ExecuteProjectTask;
 import io.inverno.tool.maven.internal.task.ModularizeDependenciesTask;
 import io.inverno.tool.maven.internal.task.PackageModularizedDependenciesTask;
 import io.inverno.tool.maven.internal.task.ResolveDependenciesTask;
+import java.io.File;
+import java.io.IOException;
+import java.lang.module.ModuleFinder;
+import java.lang.module.ModuleReference;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Optional;
+import java.util.ServiceLoader;
+import java.util.Set;
+import java.util.spi.ToolProvider;
+import org.apache.maven.plugin.MojoExecutionException;
+import org.apache.maven.plugin.MojoFailureException;
+import org.apache.maven.plugins.annotations.Parameter;
+import org.codehaus.plexus.util.StringUtils;
 
 /**
  * <p>
@@ -155,7 +152,7 @@ public abstract class AbstractExecMojo extends AbstractInvernoMojo {
 		try {
 			Set<DependencyModule> dependencies = this.getResolveDependenciesTask().call();
 			
-			ModuleReference projectModuleReference = ModuleFinder.of(Paths.get(this.project.getBuild().getOutputDirectory())).findAll().stream().findFirst().get();
+			ModuleReference projectModuleReference = ModuleFinder.of(Path.of(this.project.getBuild().getOutputDirectory())).findAll().stream().findFirst().get();
 			ProjectModule projectModule = new ProjectModule(this.project, projectModuleReference.descriptor(), dependencies, this.invernoBuildPath, this.jmodsPath, ProjectModule.Classifier.RUNTIME, Set.of());
 
 			this.getLog().info("Running project: " + projectModule + "...");
