@@ -15,25 +15,6 @@
  */
 package io.inverno.tool.maven;
 
-import java.io.File;
-import java.lang.module.ModuleFinder;
-import java.lang.module.ModuleReference;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
-import java.util.Map.Entry;
-import java.util.Optional;
-import java.util.Set;
-
-import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.MojoFailureException;
-import org.apache.maven.plugins.annotations.Execute;
-import org.apache.maven.plugins.annotations.LifecyclePhase;
-import org.apache.maven.plugins.annotations.Mojo;
-import org.apache.maven.plugins.annotations.Parameter;
-import org.apache.maven.plugins.annotations.ResolutionScope;
-import org.codehaus.plexus.util.StringUtils;
-
 import io.inverno.tool.maven.internal.DependencyModule;
 import io.inverno.tool.maven.internal.ProgressBar;
 import io.inverno.tool.maven.internal.ProjectModule;
@@ -44,6 +25,22 @@ import io.inverno.tool.maven.internal.task.CreateProjectJmodTask;
 import io.inverno.tool.maven.internal.task.CreateProjectRuntimeTask;
 import io.inverno.tool.maven.internal.task.ModularizeDependenciesTask;
 import io.inverno.tool.maven.internal.task.PackageModularizedDependenciesTask;
+import java.io.File;
+import java.lang.module.ModuleFinder;
+import java.lang.module.ModuleReference;
+import java.nio.file.Path;
+import java.util.List;
+import java.util.Map.Entry;
+import java.util.Optional;
+import java.util.Set;
+import org.apache.maven.plugin.MojoExecutionException;
+import org.apache.maven.plugin.MojoFailureException;
+import org.apache.maven.plugins.annotations.Execute;
+import org.apache.maven.plugins.annotations.LifecyclePhase;
+import org.apache.maven.plugins.annotations.Mojo;
+import org.apache.maven.plugins.annotations.Parameter;
+import org.apache.maven.plugins.annotations.ResolutionScope;
+import org.codehaus.plexus.util.StringUtils;
 
 /**
  * <p>
@@ -149,7 +146,7 @@ public class BuildApplicationMojo extends BuildRuntimeMojo {
 		try {
 			Set<DependencyModule> dependencies = this.getResolveDependenciesTask().call();
 			
-			ModuleReference projectModuleReference = ModuleFinder.of(Paths.get(this.project.getBuild().getOutputDirectory())).findAll().stream().findFirst().get();
+			ModuleReference projectModuleReference = ModuleFinder.of(Path.of(this.project.getBuild().getOutputDirectory())).findAll().stream().findFirst().get();
 			this.projectModule = new ProjectModule(this.project, projectModuleReference.descriptor(), dependencies, this.invernoBuildPath, this.jmodsPath, ProjectModule.Classifier.APPLICATION, this.formats);
 			
 			this.getLog().info("Building application image: " + this.projectModule.getApplicationImagePath() + "...");
